Large commit. Latin1 encoding, adding and removing sections (with error handling), minimal implementation of reports. Probably left something out.

--- a/cosmo.htm
+++ b/cosmo.htm
@@ -767,6 +767,7 @@
     <div class="span6">
       <h3 id="badges">Badges</h3>
       <span class="badge">Default</span>
+      <span class="badge badge-primary" style="background: rgb(15, 130, 245);">Primary</span>
       <span class="badge badge-success">Success</span>
       <span class="badge badge-warning">Warning</span>
       <span class="badge badge-important">Important</span>
